# house-buying

./: .gitignore  Cargo.toml  README.md  house-buying.js  house-buying_bg.wasm  index.html  main.py  pyproject.toml
.github/workflows/: pages.yml
config/: example_config.toml
data/config/: example_config.toml
house_buying/: __init__.py  calculations.py  config.py
src/: calculation.rs  main.rs  model.rs  plotting.rs  ui_components.rs
test/house_buying/: test_calculations.py  test_config.py
test/house_buying/data/: config.toml
