[package]
name = "house-buying"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
  "glow",
  "wayland",
  "x11",
] }
egui = { version = "0.31.1", default-features = false, features = [
  "default_fonts",
] }
egui_plot = { version = "0.32.1", default-features = false }
log = "0.4.27"


[profile.release]
strip = true
opt-level = 2
codegen-units = 1
panic = "abort"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
